src/test/ui/parser/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-impl.rs:3:13
   |
LL | impl<'a, T, 'b> X<T> {}
   |             ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | impl<'a, 'b, T> X<T> {}
   |          ^^^ --

error: aborting due to previous error

